  * JSONRPC* and Apache::JSONRPC are deleted from the distribution!
     Please check JSON::RPC (supports JSON-RPC protocol v1.1 and 1.0).

##########################################################################

 !! Since 2.16, PP's relaxed option caused an infinite loop in some condition.
 !! Recommend to update old versions.

2.17  Thu Jan  7 12:23:13 2010
	[JSON]
	- fixed a problem caused by JSON::XS backend and support_by_pp option
	  (rt#52842,  rt#52847 by ikegami)
	[JSON::PP]
	- made compatible with JSON::XS 2.27
	- patched decode for incr_parse (rt#52820 by ikegami)
	- relaxed option caused an infinite loop in some condition.

2.16  Fri Oct 16 15:07:37 2009
	[JSON][JSON::PP]
	- made compatible with JSON::XS 2.26
            *indent adds a final newline
	- corrected copyrights in JSON::PP58.

2.15  Tue Jun  2 16:36:42 2009
	[JSON]
	- made compatible with JSON::XS 2.24
	- corrected copyrights in some modules.
	[JSON::PP]
	 - modified incr_parse, pointed by Martin J. Evans (rt#46439)
	 - deleted a meaningless code

2.14  Tue Feb 24 11:20:24 2009
	[JSON]
	- the compatible XS version was miswritten in document.

2.13  Sat Feb 21 17:01:05 2009
	[JSON::PP]
	- decode() didn't upgrade unicode escaped charcters \u0080-\u00ff.
	  this problem was pointed by rt#43424 (Mika Raento)
	[JSON::PP::56]
	- fixed utf8::encode/decode emulators bugs.
	- defined a missing B module constant in Perl 5.6.0.
	  (reported by Clinton Pierce)
	[JSON::PP::5005]
	- _decode_unicode() returned a 0x80-0xff value as UTF8 encoded byte.
	[JSON]
	- added a refference to JSON::XS's document "JSON and ECMAscript".
	- fixed a typo in the document (pointed by Jim Cromie).

2.12  Wed Jul 16 11:14:35 2008
	[JSON]
	- made compatible with JSON::XS 2.22

	[JSON::PP]
	- fixed the incremental parser in negative nest level
	    (pointed and patched by Yuval Kogman)

2.11  Tue Jun 17 14:30:01 2008
	[JSON::PP]
	- fixed the decoding process which checks number.