@@ -16,6 +16,10 @@ In this version, JSON was totally rewritten.
  !! Since 2.16, PP's relaxed option caused an infinite loop in some condition.
  !! Recommend to update old versions.
 
+2.XX
+	[JSON::PP]
+	- fixed encode an overloaded 'eq' object bug (reported by Alexey A. Kiritchun)
+
 2.17  Thu Jan  7 12:23:13 2010
 	[JSON]
 	- fixed a problem caused by JSON::XS backend and support_by_pp option
